# BlackJack

./: Dockerfile  docker-compose.yml  pyproject.toml
database/: db_create.sql
game_server/src/: __init__.py  central_api.py  encryption.py  event_handlers.py  game_loop.py  main.py  routes.py
game_server/src/config/: settings.py
game_server/src/controller/: connection_controller.py
game_server/src/model/: game_structures.py
game_server/src/templates/: index.html
game_server/tests/: test_card_and_deck.py  test_game.py  test_game_logic.py  test_gameloop.py  test_hand.py  test_tablemanager.py  test_user.py
main_server/client_interface/client/: __init__.py  constants.py  event_handlers.py  main.py  routes.py
main_server/client_interface/client/controller/: api_client.py  client_controller.py  dispatcher.py  routes_controller.py  web_controller.py
main_server/client_interface/client/model/: structures.py
main_server/client_interface/client/templates/: access.html  home.html  index.html  login.html
main_server/client_interface/client/utils/: security.py
main_server/common/: structures.py
main_server/common/test/: test_structures.py
main_server/database_interface/: main.py
main_server/database_interface/database/: __init__.py  main.py  routes.py
main_server/database_interface/database/controller/: database_controller.py  servers_database_controller.py  users_database_controller.py
main_server/database_interface/database/model/: database_actions.py  db_model.py
main_server/database_interface/orm/: orm.py
main_server/database_interface/src/: main.py  routes.py
main_server/database_interface/src/controller/: database_controller.py
main_server/database_interface/src/model/: database_actions.py
main_server/database_interface/src/orm/: orm.py
main_server/database_interface/test/: test_database_actions.py
main_server/servers_interface/servers/: event_handlers.py  main.py  routes.py
main_server/servers_interface/servers/controller/: servers_controller.py
